@@ -1,5 +1,10 @@
 2009-04-28  Colin Watson  <cjwatson@debian.org>
 
+	* src/gui.c (new_gui), src/prefs.c (tele_view_update_page): Convert
+	from gnome_pixmap_file to gnome_program_locate_file.
+
+2009-04-28  Colin Watson  <cjwatson@debian.org>
+
 	Clean up most uses of deprecated GNOME APIs. There are still a few
 	difficult ones left.
 
